# cocoa-tracker

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  build.sh  lambda_function.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml  cicd.yml  test.yml
src/: config.py  functions.py  notifications.py  scraper.py  service.py  storage.py
tests/: test_config.py  test_functions.py  test_lambda_handler.py  test_notifications.py  test_service.py  test_storage.py
tests/assets/: sample_page.html
