[project]
name = "cocoa-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "boto3>=1.40.30",
    "commitizen>=4.9.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
