[project]
name = "cocoa-tracker"
version = "0.2.0"
description = "Scraper for Budapest Festival Orchestra Cocoa Concerts with Telegram notifications"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "requests>=2.32.5",
    "pydantic-settings>=2.7.1",
]

[dependency-groups]
dev = [
    "boto3>=1.40.30",
    "commitizen>=4.9.1",
    "mypy>=1.11.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.9.0",
    "types-requests>=2.32.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
